--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
 
     <title>Frontend Mentor | Todo app</title>
   </head>
-  <body>
+  <body class="">
     <div class="container">
       <header class="header">
         <h1 class="header__title">Todo</h1>
-        <button class="header__theme-toggle"></button>
+        <button
+          class="header__theme-toggle"
+          aria-label="Toggle theme colors"
+        ></button>
       </header>
       <main class="todo">
         <div class="todo__input">
@@ -33,28 +36,29 @@
           <input
             class="todo__input-text"
             type="text"
-            name=""
             id="todo-input"
+            aria-label="New todo"
             placeholder="Create a new todo..."
           />
         </div>
         <div class="todo__list">
           <ul class="todo__list-items">
-            <li class="todo__list-item">
-              <input type="checkbox" name="" id="task0" />
+            <!-- <li class="todo__list-item">
+              <input type="checkbox" name="Check" id="task0" />
               <label for="task0">
                 <span></span>
                 Complete online JavaScript course
               </label>
-              <button></button>
-            </li>
-            <li class="todo__list-item">
-              <input type="checkbox" name="" id="task1" />
+              <button><span class="sr-only">Delete</span></button>
+            </li> -->
+            <!-- <li class="todo__list-item">
+              <input type="checkbox" name="Check" id="task1" />
 
               <label for="task1"><span></span>Jog around the park x3</label>
 
-              <button></button>
+              <button><span class="sr-only">Delete</span></button>
             </li>
+
             <li class="todo__list-item">
               <input type="checkbox" name="" id="task2" />
 
@@ -80,14 +84,14 @@
               <input type="checkbox" name="" id="task5" />
 
               <label for="task5">
-                <span></span>Compelete Todo app Frontend Mentor</label
-              >
+                <span></span>Compelete Todo app Frontend Mentor.
+              </label>
 
               <button></button>
-            </li>
+            </li> -->
           </ul>
           <div class="todo__list-options">
-            <p><span>5</span> items left</p>
+            <p><span class="items-left"></span> items left</p>
             <div class="tabs" role="tablist" aria-label="sort todos">
               <button role="tab" aria-selected="true">All</button>
               <button role="tab">Active</button>
