--- a/index.html
+++ b/index.html
@@ -43,54 +43,7 @@
           />
         </div>
         <div class="todo__list">
-          <ul class="todo__list-items">
-            <!-- <li class="todo__list-item">
-              <input type="checkbox" name="Check" id="task0" />
-              <label for="task0">
-                <span></span>
-                Complete online JavaScript course
-              </label>
-              <button id="delete"><span class="sr-only">Delete</span></button>
-            </li> -->
-            <!-- <li class="todo__list-item">
-              <input type="checkbox" name="Check" id="task1" />
-
-              <label for="task1"><span></span>Jog around the park x3</label>
-
-              <button><span class="sr-only">Delete</span></button>
-            </li>
-
-            <li class="todo__list-item">
-              <input type="checkbox" name="" id="task2" />
-
-              <label for="task2"> <span></span>10 minutes meditation</label>
-
-              <button></button>
-            </li>
-            <li class="todo__list-item">
-              <input type="checkbox" name="" id="task3" />
-
-              <label for="task3"> <span></span>Read for 1 hour</label>
-
-              <button></button>
-            </li>
-            <li class="todo__list-item">
-              <input type="checkbox" name="" id="task4" />
-
-              <label for="task4"> <span></span>Pick up groceries</label>
-
-              <button></button>
-            </li>
-            <li class="todo__list-item">
-              <input type="checkbox" name="" id="task5" />
-
-              <label for="task5">
-                <span></span>Compelete Todo app Frontend Mentor.
-              </label>
-
-              <button></button>
-            </li> -->
-          </ul>
+          <ul class="todo__list-items"></ul>
           <div class="todo__list-options">
             <p><span class="items-left"></span> items left</p>
             <div class="tabs" role="tablist" aria-label="sort todos">
@@ -109,7 +62,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">ivcp</a>.
+      >. Coded by <a href="https://github.com/ivcp">ivcp</a>.
     </footer>
   </body>
 </html>
