--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <script defer type="module" src="./js/app.js"></script>
+    <script type="module" src="./js/app.js"></script>
 
     <title>Frontend Mentor | Todo app</title>
   </head>
